--- a/article.html
+++ b/article.html
@@ -4,18 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- <link rel="preload" href="fonts/DroidSerif.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/DroidSerif-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/lato-bold.woff2" as="font" type="font/woff2" crossorigin> -->
+
   <link href="css/style.css" rel="stylesheet">
   <title>ShopOnline</title>
 </head>
 
 <body>
   <div class="wrapper">
-    <div class="section">
-      <h1>
+    <article class="article">
+      <h1 class="section-title one-title">
         Как ухаживать за обувью из кожи
       </h1>
 
-      <p>
+      <p class="paragraph-one">
         Материала для обуви лучше натуральной кожи все ещё не придумали. Качественную кожу очень приятно носить, она
         идеально
         ложится по ноге, в нужных местах немного растягивается. В кожаной обуви, если она соответствует погоде,
@@ -25,7 +31,7 @@
         больше 60% покупателей выбирает обувь именно из гладкой натуральной кожи. Вдобавок кожа практична и не требует
         трудоёмкого ухода.
       </p>
-      <p>
+      <p class="paragraph-one">
         Но это совсем не означает, что можно раз в полгода протереть обувь тряпочкой и на этом остановиться. Так же, как
         кожа
         лица и тела, материал обуви нуждается в заботе. Регулярный уход надолго продлит срок службы любимой пары и
@@ -34,108 +40,106 @@
         аккуратной и сияющей, словно только что из магазина.
       </p>
 
-      <nav>
-        <ul class="article-list">
-          <li><a href="#purchase">1. На что стоит обратить внимание перед покупкой</a></li>
-          <li><a href="#before">2. Перед тем, как надеть обувь первый раз</a></li>
-          <li><a href="#care">3. Ежедневный уход за кожаной обувью в домашних условиях</a></li>
-        </ul>
+      <nav class="article-menu">
+        <ol class="article-list">
+          <li class="article-list__item"><a class="article-list__link" href="#purchase">На что стоит обратить внимание
+              перед покупкой</a></li>
+          <li class="article-list__item"><a class="article-list__link" href="#before">Перед тем, как надеть обувь первый
+              раз</a></li>
+          <li class="article-list__item"><a class="article-list__link" href="#care">Ежедневный уход за кожаной обувью в
+              домашних условиях</a></li>
+        </ol>
       </nav>
-    </div>
 
-    <div class="wrapper-min">
-      <div class="section" id="purchase">
-        <img class="purchase" src="./images/article/01.jpg" alt="изображение туфлей">
 
-        <h2>
-          На что стоит обратить внимание перед покупкой
-        </h2>
-        <p>
-          Подбирайте обувь точно по размеру и полноте. Слишком тесная обувь будет чрезмерно растягиваться, и кожа
-          испортится, не говоря уже о дискомфорте. А если модель сидит слишком свободно, то при ходьбе на ней начнут
-          образовываться складки и заломы.
-        </p>
+      <div class="wrapper-min">
+        <section class="section" id="purchase">
+          <img class="article-img" src="./images/article/01.jpg" alt="изображение туфлей">
 
+          <h2 class="section-title two-title">
+            На что стоит обратить внимание перед покупкой
+          </h2>
+          <p class="paragraph-one">
+            Подбирайте обувь точно по размеру и полноте. Слишком тесная обувь будет чрезмерно растягиваться, и кожа
+            испортится, не говоря уже о дискомфорте. А если модель сидит слишком свободно, то при ходьбе на ней начнут
+            образовываться складки и заломы.
+          </p>
+        </section>
+
+        <section class="section" id="before">
+          <h2 class="section-title two-title">
+            Перед тем, как надеть обувь первый раз
+          </h2>
+          <p class="paragraph-one">
+            Перед первой ноской для новой пары нужно подобрать водо- или грязеотталкивающее средство, подходящее для
+            натуральной кожи, и обработать кожу в соответствии с инструкцией. После высыхания – чистить кремом.
+          </p>
+        </section>
+
+        <section class="care-section" id="care">
+          <h2 class="section-title two-title">
+            Ежедневный уход за кожаной обувью в домашних условиях
+          </h2>
+          <p class="paragraph-one">
+            Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем появляются
+            трудновыводимые пятна, портится цвет кожи, образуются трещины.
+          </p>
+
+          <section class="section">
+            <p class="paragraph-two">
+              После каждого выхода на улицу протирайте обувь сухой салфеткой, если на коже только пыль, или влажной
+              тряпкой - в случае сильного загрязнения. Начинайте мыть с каблука, затем очистите подошву и после этого –
+              материал
+              верха.
+              После мытья нужно как следует протереть пару мягкой тканью, чтобы избавить от лишней влаги. Иначе обувь
+              будет
+              сушиться очень долго.
+            </p>
+          </section>
+
+          <section class="section">
+            <img class="article-img" src="./images/article/02.jpg" alt="инвентарь для чистки обуви">
+            <h3 class="section-title three-title">
+              Второй этап – сушка.
+            </h3>
+            <p class="paragraph-two">
+              Ни в коем случае не используйте источники тепла – батарею, обогреватель, фен с горячим воздухом. Да, они
+              сушат быстро, но за это приходит расплата в виде задубевшей покоробившейся кожи.
+            </p>
+            <p class="paragraph-two">
+              Нужно вытащить стельки, набить обувь бумагой либо положить внутрь формодержатели и сушить при комнатной
+              температуре. Тогда ваши туфли или сапоги надолго сохранят красивую форму без заломов.
+              Сушка длится довольно долго, и поэтому не рекомендуется носить одну и ту же пару каждый день. Обувь и
+              подкладка должны отдохнуть и расправиться, только тогда вам будет комфортно и тепло.
+            </p>
+          </section>
+
+          <section class="last-section">
+            <h3 class="section-title three-title">
+              И наконец – крем.
+            </h3>
+            <p class="paragraph-two">
+              Сухую и чистую пару нужно обработать кремом, чтобы кожа оставалась эластичной, мягкой и блестящей.
+              Нанесите крем тоненьким слоем с помощью обувной щётки, и аккуратно распределите по всей поверхности.
+              Затем
+              через несколько часов, когда крем впитается, сотрите остатки сухой салфеткой и отполируйте кожу мягкой
+              тряпочкой.
+            </p>
+            <p class="paragraph-two">
+              Крем подбирается точно в цвет обуви, поэтому стоит задуматься ещё перед покупкой, каким уходовым
+              средством
+              вы будете пользоваться.
+            </p>
+            <p class="paragraph-two">
+              В магазине легко подобрать черный, коричневый и самый универсальный – бесцветный крем. В продаже есть и
+              другие цвета, но бывает сложно найти нужный оттенок.
+              По мере необходимости дополнительно обрабатывайте пару водоотталкивающими спреями.
+            </p>
+          </section>
+        </section>
       </div>
-
-      <div class="section" id="before">
-        <h2>
-          Перед тем, как надеть обувь первый раз
-        </h2>
-        <p>
-          Перед первой ноской для новой пары нужно подобрать водо- или грязеотталкивающее средство, подходящее для
-          натуральной кожи, и обработать кожу в соответствии с инструкцией. После высыхания – чистить кремом.
-        </p>
-      </div>
-
-      <div class="section" id="care">
-        <h2>
-          Ежедневный уход за кожаной обувью в домашних условиях
-        </h2>
-
-        <p>
-          Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем появляются
-          трудновыводимые пятна, портится цвет кожи, образуются трещины.
-        </p>
-      </div>
-      <div class="section">
-        <h3 aria-label="Первый этап - протирка"></h3>
-
-        <p>
-          После каждого выхода на улицу протирайте обувь сухой салфеткой, если на коже только пыль, или влажной
-          тряпкой
-          -
-          в случае сильного загрязнения. Начинайте мыть с каблука, затем очистите подошву и после этого – материал
-          верха.
-          После мытья нужно как следует протереть пару мягкой тканью, чтобы избавить от лишней влаги. Иначе обувь
-          будет
-          сушиться очень долго.
-        </p>
-
-        <img class="care" src="./images/article/02.jpg" alt="инвентарь для чистки обуви">
-      </div>
-
-      <div class="section">
-        <h3>
-          Второй этап – сушка.
-        </h3>
-        <p>
-          Ни в коем случае не используйте источники тепла – батарею, обогреватель, фен с горячим воздухом. Да, они
-          сушат быстро, но за это приходит расплата в виде задубевшей покоробившейся кожи.
-          Нужно вытащить стельки, набить обувь бумагой либо положить внутрь формодержатели и сушить при комнатной
-          температуре. Тогда ваши туфли или сапоги надолго сохранят красивую форму без заломов.
-          Сушка длится довольно долго, и поэтому не рекомендуется носить одну и ту же пару каждый день. Обувь и
-          подкладка должны отдохнуть и расправиться, только тогда вам будет комфортно и тепло.
-        </p>
-      </div>
-
-      <div class="section">
-        <h3>
-          И наконец – крем.
-        </h3>
-        <p>
-          Сухую и чистую пару нужно обработать кремом, чтобы кожа оставалась эластичной, мягкой и блестящей.
-          Нанесите крем тоненьким слоем с помощью обувной щётки, и аккуратно распределите по всей поверхности.
-          Затем
-          через несколько часов, когда крем впитается, сотрите остатки сухой салфеткой и отполируйте кожу мягкой
-          тряпочкой.
-          Крем подбирается точно в цвет обуви, поэтому стоит задуматься ещё перед покупкой, каким уходовым
-          средством
-          вы будете пользоваться.
-          В магазине легко подобрать черный, коричневый и самый универсальный – бесцветный крем. В продаже есть и
-          другие цвета, но бывает сложно найти нужный оттенок.
-          По мере необходимости дополнительно обрабатывайте пару водоотталкивающими спреями.
-        </p>
-      </div>
-    </div>
+    </article>
   </div>
-
-
-
-
-
-
-
 
 </body>
 
