--- a/article.html
+++ b/article.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- <link rel="preload" href="fonts/DroidSerif.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/DroidSerif.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/DroidSerif-Bold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/lato-bold.woff2" as="font" type="font/woff2" crossorigin> -->
+  <link rel="preload" href="fonts/lato-bold.woff2" as="font" type="font/woff2" crossorigin>
 
   <link href="css/style.css" rel="stylesheet">
   <title>ShopOnline</title>
@@ -17,7 +17,7 @@
 <body>
   <div class="wrapper">
     <article class="article">
-      <h1 class="section-title one-title">
+      <h1 class="section-title h1-title">
         Как ухаживать за обувью из кожи
       </h1>
 
@@ -56,7 +56,7 @@
         <section class="section" id="purchase">
           <img class="article-img" src="./images/article/01.jpg" alt="изображение туфлей">
 
-          <h2 class="section-title two-title">
+          <h2 class="section-title bold-title">
             На что стоит обратить внимание перед покупкой
           </h2>
           <p class="paragraph-one">
@@ -67,7 +67,7 @@
         </section>
 
         <section class="section" id="before">
-          <h2 class="section-title two-title">
+          <h2 class="section-title bold-title">
             Перед тем, как надеть обувь первый раз
           </h2>
           <p class="paragraph-one">
@@ -76,17 +76,17 @@
           </p>
         </section>
 
-        <section class="care-section" id="care">
-          <h2 class="section-title two-title">
-            Ежедневный уход за кожаной обувью в домашних условиях
-          </h2>
-          <p class="paragraph-one">
-            Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем появляются
-            трудновыводимые пятна, портится цвет кожи, образуются трещины.
-          </p>
-
+        <section class="section" id="care">
           <section class="section">
-            <p class="paragraph-two">
+            <h2 class="section-title bold-title">
+              Ежедневный уход за кожаной обувью в домашних условиях
+            </h2>
+            <p class="paragraph-one">
+              Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем появляются
+              трудновыводимые пятна, портится цвет кожи, образуются трещины.
+            </p>
+
+            <p class="paragraph-one">
               После каждого выхода на улицу протирайте обувь сухой салфеткой, если на коже только пыль, или влажной
               тряпкой - в случае сильного загрязнения. Начинайте мыть с каблука, затем очистите подошву и после этого –
               материал
@@ -99,14 +99,14 @@
 
           <section class="section">
             <img class="article-img" src="./images/article/02.jpg" alt="инвентарь для чистки обуви">
-            <h3 class="section-title three-title">
+            <h3 class="section-title">
               Второй этап – сушка.
             </h3>
             <p class="paragraph-two">
               Ни в коем случае не используйте источники тепла – батарею, обогреватель, фен с горячим воздухом. Да, они
               сушат быстро, но за это приходит расплата в виде задубевшей покоробившейся кожи.
             </p>
-            <p class="paragraph-two">
+            <p class="paragraph-one">
               Нужно вытащить стельки, набить обувь бумагой либо положить внутрь формодержатели и сушить при комнатной
               температуре. Тогда ваши туфли или сапоги надолго сохранят красивую форму без заломов.
               Сушка длится довольно долго, и поэтому не рекомендуется носить одну и ту же пару каждый день. Обувь и
@@ -114,8 +114,8 @@
             </p>
           </section>
 
-          <section class="last-section">
-            <h3 class="section-title three-title">
+          <section class="section">
+            <h3 class="section-title">
               И наконец – крем.
             </h3>
             <p class="paragraph-two">
