--- a/article.html
+++ b/article.html
@@ -8,136 +8,157 @@
   <link rel="preload" href="fonts/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/lato-bold.woff2" as="font" type="font/woff2" crossorigin>
 
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <title>ShopOnline</title>
 </head>
 
 <body>
-  <div class="wrapper">
-    <article class="article">
-      <h1 class="section-title h1-title">
-        Как ухаживать за обувью из кожи
-      </h1>
-
-      <p class="paragraph-one">
-        Материала для обуви лучше натуральной кожи все ещё не придумали. Качественную кожу очень приятно носить, она
-        идеально
-        ложится по ноге, в нужных местах немного растягивается. В кожаной обуви, если она соответствует погоде,
-        создаётся
-        хороший микроклимат – ноги не мёрзнут, не потеют, и чувствуют себя очень комфортно. Неудивительно, что по
-        статистике
-        больше 60% покупателей выбирает обувь именно из гладкой натуральной кожи. Вдобавок кожа практична и не требует
-        трудоёмкого ухода.
-      </p>
-      <p class="paragraph-one">
-        Но это совсем не означает, что можно раз в полгода протереть обувь тряпочкой и на этом остановиться. Так же, как
-        кожа
-        лица и тела, материал обуви нуждается в заботе. Регулярный уход надолго продлит срок службы любимой пары и
-        сделает
-        её
-        аккуратной и сияющей, словно только что из магазина.
-      </p>
-
-      <nav class="article-menu">
-        <ol class="article-list">
-          <li class="article-list__item"><a class="article-list__link" href="#purchase">На что стоит обратить внимание
-              перед покупкой</a></li>
-          <li class="article-list__item"><a class="article-list__link" href="#before">Перед тем, как надеть обувь первый
-              раз</a></li>
-          <li class="article-list__item"><a class="article-list__link" href="#care">Ежедневный уход за кожаной обувью в
-              домашних условиях</a></li>
-        </ol>
-      </nav>
-
-
-      <div class="wrapper-min">
-        <section class="section" id="purchase">
-          <img class="article-img" src="./images/article/01.jpg" alt="изображение туфлей">
-
-          <h2 class="section-title bold-title">
-            На что стоит обратить внимание перед покупкой
-          </h2>
-          <p class="paragraph-one">
-            Подбирайте обувь точно по размеру и полноте. Слишком тесная обувь будет чрезмерно растягиваться, и кожа
-            испортится, не говоря уже о дискомфорте. А если модель сидит слишком свободно, то при ходьбе на ней начнут
-            образовываться складки и заломы.
+  <article class="article">
+    <section class="previos">
+      <div class="container">
+        <h1 class="previos-title">
+          Как ухаживать за обувью из кожи
+        </h1>
+        <div class="previos-box">
+          <p class="paragraph">
+            Материала для обуви лучше натуральной кожи все ещё не придумали. Качественную кожу очень приятно носить, она
+            идеально
+            ложится по ноге, в нужных местах немного растягивается. В кожаной обуви, если она соответствует погоде,
+            создаётся
+            хороший микроклимат – ноги не мёрзнут, не потеют, и чувствуют себя очень комфортно. Неудивительно, что по
+            статистике
+            больше 60% покупателей выбирает обувь именно из гладкой натуральной кожи. Вдобавок кожа практична и не
+            требует
+            трудоёмкого ухода.
           </p>
-        </section>
-
-        <section class="section" id="before">
-          <h2 class="section-title bold-title">
-            Перед тем, как надеть обувь первый раз
-          </h2>
-          <p class="paragraph-one">
-            Перед первой ноской для новой пары нужно подобрать водо- или грязеотталкивающее средство, подходящее для
-            натуральной кожи, и обработать кожу в соответствии с инструкцией. После высыхания – чистить кремом.
+          <p class="paragraph">
+            Но это совсем не означает, что можно раз в полгода протереть обувь тряпочкой и на этом остановиться. Так же,
+            как
+            кожа
+            лица и тела, материал обуви нуждается в заботе. Регулярный уход надолго продлит срок службы любимой пары и
+            сделает
+            её
+            аккуратной и сияющей, словно только что из магазина.
           </p>
-        </section>
+        </div>
 
-        <section class="section" id="care">
-          <section class="section">
-            <h2 class="section-title bold-title">
-              Ежедневный уход за кожаной обувью в домашних условиях
-            </h2>
-            <p class="paragraph-one">
-              Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем появляются
-              трудновыводимые пятна, портится цвет кожи, образуются трещины.
-            </p>
+        <nav class="previos-menu">
+          <ol class="previos-list">
+            <li class="previos-list__item"><a class="previos-link" href="#purchase">На что стоит обратить внимание
+                перед покупкой</a></li>
+            <li class="previos-list__item"><a class="previos-link" href="#before">Перед тем, как надеть обувь
+                первый
+                раз</a></li>
+            <li class="previos-list__item"><a class="previos-link" href="#care">Ежедневный уход за кожаной обувью
+                в
+                домашних условиях</a></li>
+          </ol>
+        </nav>
 
-            <p class="paragraph-one">
-              После каждого выхода на улицу протирайте обувь сухой салфеткой, если на коже только пыль, или влажной
-              тряпкой - в случае сильного загрязнения. Начинайте мыть с каблука, затем очистите подошву и после этого –
-              материал
-              верха.
-              После мытья нужно как следует протереть пару мягкой тканью, чтобы избавить от лишней влаги. Иначе обувь
-              будет
-              сушиться очень долго.
-            </p>
-          </section>
-
-          <section class="section">
-            <img class="article-img" src="./images/article/02.jpg" alt="инвентарь для чистки обуви">
-            <h3 class="section-title">
-              Второй этап – сушка.
-            </h3>
-            <p class="paragraph-two">
-              Ни в коем случае не используйте источники тепла – батарею, обогреватель, фен с горячим воздухом. Да, они
-              сушат быстро, но за это приходит расплата в виде задубевшей покоробившейся кожи.
-            </p>
-            <p class="paragraph-one">
-              Нужно вытащить стельки, набить обувь бумагой либо положить внутрь формодержатели и сушить при комнатной
-              температуре. Тогда ваши туфли или сапоги надолго сохранят красивую форму без заломов.
-              Сушка длится довольно долго, и поэтому не рекомендуется носить одну и ту же пару каждый день. Обувь и
-              подкладка должны отдохнуть и расправиться, только тогда вам будет комфортно и тепло.
-            </p>
-          </section>
-
-          <section class="section">
-            <h3 class="section-title">
-              И наконец – крем.
-            </h3>
-            <p class="paragraph-two">
-              Сухую и чистую пару нужно обработать кремом, чтобы кожа оставалась эластичной, мягкой и блестящей.
-              Нанесите крем тоненьким слоем с помощью обувной щётки, и аккуратно распределите по всей поверхности.
-              Затем
-              через несколько часов, когда крем впитается, сотрите остатки сухой салфеткой и отполируйте кожу мягкой
-              тряпочкой.
-            </p>
-            <p class="paragraph-two">
-              Крем подбирается точно в цвет обуви, поэтому стоит задуматься ещё перед покупкой, каким уходовым
-              средством
-              вы будете пользоваться.
-            </p>
-            <p class="paragraph-two">
-              В магазине легко подобрать черный, коричневый и самый универсальный – бесцветный крем. В продаже есть и
-              другие цвета, но бывает сложно найти нужный оттенок.
-              По мере необходимости дополнительно обрабатывайте пару водоотталкивающими спреями.
-            </p>
-          </section>
-        </section>
+        <img class="article-img" src="./images/previos.jpg" alt="изображение туфлей">
       </div>
-    </article>
-  </div>
+    </section>
+
+    <section class="section" id="purchase">
+      <div class="container">
+
+        <h2 class="section-title section-title_bold">
+          На что стоит обратить внимание перед покупкой
+        </h2>
+        <p class="text">
+          Подбирайте обувь точно по размеру и полноте. Слишком тесная обувь будет чрезмерно растягиваться, и кожа
+          испортится, не говоря уже о дискомфорте. А если модель сидит слишком свободно, то при ходьбе на ней начнут
+          образовываться складки и заломы.
+        </p>
+      </div>
+
+    </section>
+
+
+    <section class="section" id="before">
+      <div class="container">
+        <h2 class="section-title section-title_bold">
+          Перед тем, как надеть обувь первый раз
+        </h2>
+        <p class="text">
+          Перед первой ноской для новой пары нужно подобрать водо- или грязеотталкивающее средство, подходящее для
+          натуральной кожи, и обработать кожу в соответствии с инструкцией. После высыхания – чистить кремом.
+        </p>
+      </div>
+    </section>
+
+    <section class="section" id="care" aria-label="Уход за обувью">
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title section-title_bold">
+            Ежедневный уход за кожаной обувью в домашних условиях
+          </h2>
+          <p class="paragraph">
+            Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем
+            появляются
+            трудновыводимые пятна, портится цвет кожи, образуются трещины.
+          </p>
+
+          <p class="paragraph">
+            После каждого выхода на улицу протирайте обувь сухой салфеткой, если на коже только пыль, или влажной
+            тряпкой - в случае сильного загрязнения. Начинайте мыть с каблука, затем очистите подошву и после этого
+            –
+            материал
+            верха.
+            После мытья нужно как следует протереть пару мягкой тканью, чтобы избавить от лишней влаги. Иначе обувь
+            будет
+            сушиться очень долго.
+          </p>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container">
+          <img class="article-img article-img_care" src="./images/article/02.jpg" alt="инвентарь для чистки обуви">
+          <h3 class="section-title">
+            Второй этап – сушка.
+          </h3>
+          <p class="text">
+            Ни в коем случае не используйте источники тепла – батарею, обогреватель, фен с горячим воздухом. Да, они
+            сушат быстро, но за это приходит расплата в виде задубевшей покоробившейся кожи.
+          </p>
+          <p class="text">
+            Нужно вытащить стельки, набить обувь бумагой либо положить внутрь формодержатели и сушить при комнатной
+            температуре. Тогда ваши туфли или сапоги надолго сохранят красивую форму без заломов.
+            Сушка длится довольно долго, и поэтому не рекомендуется носить одну и ту же пару каждый день. Обувь и
+            подкладка должны отдохнуть и расправиться, только тогда вам будет комфортно и тепло.
+          </p>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container">
+          <h3 class="section-title">
+            И наконец – крем.
+          </h3>
+          <p class="text">
+            Сухую и чистую пару нужно обработать кремом, чтобы кожа оставалась эластичной, мягкой и блестящей.
+            Нанесите крем тоненьким слоем с помощью обувной щётки, и аккуратно распределите по всей поверхности.
+            Затем
+            через несколько часов, когда крем впитается, сотрите остатки сухой салфеткой и отполируйте кожу мягкой
+            тряпочкой.
+          </p>
+          <p class="text">
+            Крем подбирается точно в цвет обуви, поэтому стоит задуматься ещё перед покупкой, каким уходовым
+            средством
+            вы будете пользоваться.
+          </p>
+          <p class="text">
+            В магазине легко подобрать черный, коричневый и самый универсальный – бесцветный крем. В продаже есть и
+            другие цвета, но бывает сложно найти нужный оттенок.
+            По мере необходимости дополнительно обрабатывайте пару водоотталкивающими спреями.
+          </p>
+        </div>
+      </section>
+    </section>
+  </article>
+
 
 </body>
 
