--- a/index.html
+++ b/index.html
@@ -2,165 +2,160 @@
 <html lang="ru">
 
 <head>
+  <link href="css/style.css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="preload" href="fonts/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/lato-bold.woff2" as="font" type="font/woff2" crossorigin>
-
-  <link href="css/style.css" rel="stylesheet">
+  <!-- <link rel="preload" href="fonts/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/lato-bold.woff2" as="font" type="font/woff2" crossorigin> -->
   <title>ShopOnline</title>
 </head>
 
-<body>
-  <main>
-    <article class="article">
-      <section class="previos">
-        <div class="container">
-          <h1 class="previos-title">
-            Как ухаживать за обувью из кожи
-          </h1>
-          <div class="previos-box">
-            <p class="paragraph">
-              Материала для обуви лучше натуральной кожи все ещё не придумали. Качественную кожу очень приятно носить,
-              она
-              идеально
-              ложится по ноге, в нужных местах немного растягивается. В кожаной обуви, если она соответствует погоде,
-              создаётся
-              хороший микроклимат – ноги не мёрзнут, не потеют, и чувствуют себя очень комфортно. Неудивительно, что по
-              статистике
-              больше 60% покупателей выбирает обувь именно из гладкой натуральной кожи. Вдобавок кожа практична и не
-              требует
-              трудоёмкого ухода.
-            </p>
-            <p class="paragraph">
-              Но это совсем не означает, что можно раз в полгода протереть обувь тряпочкой и на этом остановиться. Так
-              же,
-              как
-              кожа
-              лица и тела, материал обуви нуждается в заботе. Регулярный уход надолго продлит срок службы любимой пары и
-              сделает
-              её
-              аккуратной и сияющей, словно только что из магазина.
-            </p>
-          </div>
+<doby>
+  <section class="previos__prev">
+    <div class="container">
+      <h1 class="previos__title">Как ухаживать за обувью из кожи</h1>
+      <p class="paragraph">
+        Материала для обуви лучше натуральной кожи все ещё не придумали. Качественную кожу очень приятно носить,
+        она
+        идеально
+        ложится по ноге, в нужных местах немного растягивается. В кожаной обуви, если она соответствует погоде,
+        создаётся
+        хороший микроклимат – ноги не мёрзнут, не потеют, и чувствуют себя очень комфортно. Неудивительно, что по
+        статистике
+        больше 60% покупателей выбирает обувь именно из гладкой натуральной кожи. Вдобавок кожа практична и не
+        требует
+        трудоёмкого ухода.
+      </p>
+      <p class="paragraph">
+        Но это совсем не означает, что можно раз в полгода протереть обувь тряпочкой и на этом остановиться. Так
+        же,
+        как
+        кожа
+        лица и тела, материал обуви нуждается в заботе. Регулярный уход надолго продлит срок службы любимой пары и
+        сделает
+        её
+        аккуратной и сияющей, словно только что из магазина.
+      </p>
+    </div>
+  </section>
+  <section class="nav">
+    <div class="container">
+      <nav class="previos__menu">
+        <ol class="previos__list">
+          <li class="previos__item"><a class="previos__link" href="#purchase">На что стоит обратить внимание перед
+              покуеш -рокупакпикой</a></li>
+          <li class="previos__item"><a class="previos__link" href="#before">Перед тем, как надеть обувь
+              первый
+              раз</a></li>
+          <li class="previos__item"><a class="previos__link" href="#care">Ежедневный уход за кожаной обувью
+              в
+              домашних условиях</a></li>
+        </ol>
+      </nav>
+    </div>
 
-          <nav class="previos-menu">
-            <ol class="previos-list">
-              <li class="previos-list__item"><a class="previos-link" href="#purchase">На что стоит обратить внимание
-                  перед покупкой</a></li>
-              <li class="previos-list__item"><a class="previos-link" href="#before">Перед тем, как надеть обувь
-                  первый
-                  раз</a></li>
-              <li class="previos-list__item"><a class="previos-link" href="#care">Ежедневный уход за кожаной обувью
-                  в
-                  домашних условиях</a></li>
-            </ol>
-          </nav>
+  </section>
 
-          <img class="article-img" src="./images/previos.jpg" alt="изображение туфлей">
-        </div>
+  <img class="article__img" src="./images/previos.jpg" alt="изображение туфлей">
+
+
+
+  <section class="section fish">
+    <div class="container">
+      <h2 class="section-title section__itle_nsmt_bold">
+        На что стоит обратить внимание перед покупкой
+      </h2>
+      <p class="text">
+        Подбирайте обувь точно по размеру и полноте. Слишком тесная обувь будет чрезмерно растягиваться, и кожа
+        испортится, не говоря уже о дискомфорте. А если модель сидит слишком свободно, то при ходьбе на ней начнут
+        образовываться складки и заломы.
+      </p>
+    </div>
+  </section>
+
+
+  <section class="section before" id="before">
+    <div class="container">
+      <h2 class="section__title_nme_section-title-old">
+        Перед тем, как надеть обувь первый раз
+      </h2>
+      <p class="text">
+        Перед первой ноской для новой пары нужно подобрать водо- или грязеотталкивающее средство, подходящее для
+        натуральной кожи, и обработать кожу в соответствии с инструкцией. После высыхания – чистить кремом.
+      </p>
+    </div>
+  </section>
+
+  <section class="section care" id="care" aria-label="Уход за обувью">
+    <div class="container">
+      <section class="section">
+
+        <h2 class="section-title section-title_bold">
+          Ежедневный уход за кожаной обувью в домашних условиях
+        </h2>
+        <p class="paragraph">
+          Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем
+          появляются
+          трудновыводимые пятна, портится цвет кожи, образуются трещины.
+        </p>
+
+        <p class="paragraph">
+          После каждого выхода на улицу протирайте обувь сухой салфеткой, если на коже только пыль, или влажной
+          тряпкой - в случае сильного загрязнения. Начинайте мыть с каблука, затем очистите подошву и после этого
+          –
+          материал
+          верха.
+          После мытья нужно как следует протереть пару мягкой тканью, чтобы избавить от лишней влаги. Иначе обувь
+          будет
+          сушиться очень долго.
       </section>
 
-      <section class="section" id="purchase">
+      <section class="section article">
         <div class="container">
-
-          <h2 class="section-title section-title_bold">
-            На что стоит обратить внимание перед покупкой
-          </h2>
+          <img class="article__img article__img_care" src="./images/article/02.jpg" alt="инвентарь для чистки обуви">
+          <h3 class="section-title">
+            Второй этап – сушка.
+          </h3>
           <p class="text">
-            Подбирайте обувь точно по размеру и полноте. Слишком тесная обувь будет чрезмерно растягиваться, и кожа
-            испортится, не говоря уже о дискомфорте. А если модель сидит слишком свободно, то при ходьбе на ней начнут
-            образовываться складки и заломы.
+            Ни в коем случае не используйте источники тепла – батарею, обогреватель, фен с горячим воздухом. Да, они
+            сушат быстро, но за это приходит расплата в виде задубевшей покоробившейся кожи.
           </p>
-        </div>
-
-      </section>
-
-
-      <section class="section" id="before">
-        <div class="container">
-          <h2 class="section-title section-title_bold">
-            Перед тем, как надеть обувь первый раз
-          </h2>
           <p class="text">
-            Перед первой ноской для новой пары нужно подобрать водо- или грязеотталкивающее средство, подходящее для
-            натуральной кожи, и обработать кожу в соответствии с инструкцией. После высыхания – чистить кремом.
+            Нужно вытащить стельки, набить обувь бумагой либо положить внутрь формодержатели и сушить при комнатной
+            температуре. Тогда ваши туфли или сапоги надолго сохранят красивую форму без заломов.
+            Сушка длится довольно долго, и поэтому не рекомендуется носить одну и ту же пару каждый день. Обувь и
+            подкладка должны отдохнуть и расправиться, только тогда вам будет комфортно и тепло.
           </p>
-        </div>
       </section>
+  </section>
+  </div>
 
-      <section class="section" id="care" aria-label="Уход за обувью">
-        <section class="section">
-          <div class="container">
-            <h2 class="section-title section-title_bold">
-              Ежедневный уход за кожаной обувью в домашних условиях
-            </h2>
-            <p class="paragraph">
-              Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем
-              появляются
-              трудновыводимые пятна, портится цвет кожи, образуются трещины.
-            </p>
-
-            <p class="paragraph">
-              После каждого выхода на улицу протирайте обувь сухой салфеткой, если на коже только пыль, или влажной
-              тряпкой - в случае сильного загрязнения. Начинайте мыть с каблука, затем очистите подошву и после этого
-              –
-              материал
-              верха.
-              После мытья нужно как следует протереть пару мягкой тканью, чтобы избавить от лишней влаги. Иначе обувь
-              будет
-              сушиться очень долго.
-            </p>
-          </div>
-        </section>
-
-        <section class="section">
-          <div class="container">
-            <img class="article-img article-img_care" src="./images/article/02.jpg" alt="инвентарь для чистки обуви">
-            <h3 class="section-title">
-              Второй этап – сушка.
-            </h3>
-            <p class="text">
-              Ни в коем случае не используйте источники тепла – батарею, обогреватель, фен с горячим воздухом. Да, они
-              сушат быстро, но за это приходит расплата в виде задубевшей покоробившейся кожи.
-            </p>
-            <p class="text">
-              Нужно вытащить стельки, набить обувь бумагой либо положить внутрь формодержатели и сушить при комнатной
-              температуре. Тогда ваши туфли или сапоги надолго сохранят красивую форму без заломов.
-              Сушка длится довольно долго, и поэтому не рекомендуется носить одну и ту же пару каждый день. Обувь и
-              подкладка должны отдохнуть и расправиться, только тогда вам будет комфортно и тепло.
-            </p>
-          </div>
-        </section>
-
-        <section class="section">
-          <div class="container">
-            <h3 class="section-title">
-              И наконец – крем.
-            </h3>
-            <p class="text">
-              Сухую и чистую пару нужно обработать кремом, чтобы кожа оставалась эластичной, мягкой и блестящей.
-              Нанесите крем тоненьким слоем с помощью обувной щётки, и аккуратно распределите по всей поверхности.
-              Затем
-              через несколько часов, когда крем впитается, сотрите остатки сухой салфеткой и отполируйте кожу мягкой
-              тряпочкой.
-            </p>
-            <p class="text">
-              Крем подбирается точно в цвет обуви, поэтому стоит задуматься ещё перед покупкой, каким уходовым
-              средством
-              вы будете пользоваться.
-            </p>
-            <p class="text">
-              В магазине легко подобрать черный, коричневый и самый универсальный – бесцветный крем. В продаже есть и
-              другие цвета, но бывает сложно найти нужный оттенок.
-              По мере необходимости дополнительно обрабатывайте пару водоотталкивающими спреями.
-            </p>
-          </div>
-        </section>
-      </section>
-    </article>
-  </main>
-</body>
+  <section class="section cream">
+    <div class="containe">
+      <h3 class="section-title">
+        И наконец – крем.
+      </h3>
+      <p class="text">
+        Сухую и чистую пару нужно обработать кремом, чтобы кожа оставалась эластичной, мягкой и блестящей.
+        Нанесите крем тоненьким слоем с помощью обувной щётки, и аккуратно распределите по всей поверхности.
+        Затем
+        через несколько часов, когда крем впитается, сотрите остатки сухой салфеткой и отполируйте кожу мягкой
+        тряпочкой.
+      </p>
+      <p class="text">
+        Крем подбирается точно в цвет обуви, поэтому стоит задуматься ещё перед покупкой, каким уходовым
+        средством
+        вы будете пользоваться.
+      </p>
+      <p class="text">
+        В магазине легко подобрать черный, коричневый и самый универсальный – бесцветный крем. В продаже есть и
+        другие цвета, но бывает сложно найти нужный оттенок.
+        По мере необходимости дополнительно обрабатывайте пару водоотталкивающими спреями.
+      </p>
+    </div>
+  </section>
+  </section>
+  </body>
 
 </html>
